Fix spacing for nested `form-row` used for expansible form sections

--- a/css/checkout-layout-120-dev-5.css
+++ b/css/checkout-layout-120-dev-5.css
@@ -1463,6 +1463,13 @@ div.woocommerce .wfc-expansible-form-section .expansible-section__toggle-plus {
     top: 50%;
     transform: translateY(-50%); }
 
+.wfc-expansible-form-section.form-row p.form-row {
+  margin: 0;
+  padding: 0; }
+
+.wfc-expansible-form-section.form-row.form-row-last .wfc-expansible-form-section__toggle .collapsible-content__inner {
+  padding-top: 2.3em; }
+
 body:not(.has-collapsible-block) .wfc-expansible-form-section__toggle.is-collapsed .collapsible-content__inner,
 body:not(.has-collapsible-block) .wfc-expansible-form-section__content.is-collapsed .collapsible-content__inner {
   display: none; }
